Fix overflow for textarea

--- a/assets/regexpal.css
+++ b/assets/regexpal.css
@@ -119,7 +119,7 @@ table tr.altBg              {background:#f2eab7;}
 .smartField pre,
 .smartField textarea, #test-label        {font:100% "courier new",monospace; width:100%; margin: 20px}
 .smartField pre             {z-index:1; color:#f9f9f9;}
-.smartField textarea        {z-index:2; border:0; background:transparent; position:absolute; top:0; height:100%; min-height:100%; overflow:hidden;}
+.smartField textarea        {z-index:2; border:0; background:transparent; position:absolute; top:0; overflow:hidden;}
 #test-names { width: 30%; }
 .solution { display: none; }
 .default { display: block; }
